@@ -1,3 +1,10 @@
+2011-08-21 Charles Suprin <hamaa1vs at gmail.com>
+
+    * ChangeLog
+    * src/tle-update.c
+    Eliminates memory leak and cut and paste error and removes whitespace around tle before importing.
+
+
 2011-08-20 Charles Suprin <hamaa1vs at gmail.com>
 
     * ChangeLog
